--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^19.2.4",
     "@google/genai": "^1.40.0",
     "react-router-dom": "^7.13.0",
-    "react": "^19.2.4"
+    "react": "^19.2.4",
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
