--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
         "axios": "^1.13.4",
         "cors": "^2.8.6",
         "express": "^4.22.1",
+        "express-rate-limit": "^7.5.0",
         "fluent-ffmpeg": "^2.1.3"
     },
     "description": "",
