--- a/previous/package.json
+++ b/previous/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "instaminsta-downloader",
+  "name": "instaminsta:-#1-instagram-reels-downloader-&-video-saver-(hd-2026)",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,11 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.40.0",
-    "express": "^4.21.2",
-    "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react-router-dom": "^7.13.0"
+    "@google/genai": "^1.40.0",
+    "react-router-dom": "^7.13.0",
+    "react": "^19.2.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
