--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,19 @@
     "dependencies": {
         "archiver": "^7.0.1",
         "axios": "^1.13.4",
+        "compression": "^1.8.1",
         "cors": "^2.8.6",
+        "dompurify": "^3.3.1",
+        "dotenv": "^17.2.4",
         "express": "^4.22.1",
         "express-rate-limit": "^7.5.0",
-        "fluent-ffmpeg": "^2.1.3"
+        "fluent-ffmpeg": "^2.1.3",
+        "helmet": "^8.1.0",
+        "jsdom": "^28.0.0",
+        "marked": "^17.0.1",
+        "morgan": "^1.10.1",
+        "mysql2": "^3.16.3",
+        "winston": "^3.19.0"
     },
     "description": "",
     "keywords": [],
